MOB360 UAT 20161020/src/objects/Route_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Route Schedules</relationshipLabel>
        <relationshipName>Route_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RouteDescr__c</fullName>
        <description>RouteDescr</description>
        <label>RouteDescr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RouteKey__c</fullName>
        <label>RouteKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RouteNbr__c</fullName>
        <label>RouteNbr</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>Route Schedules</relationshipLabel>
        <relationshipName>Route_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SeqNbr__c</fullName>
        <label>SeqNbr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StopDate__c</fullName>
        <label>StopDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WSLRNbrCustID__c</fullName>
        <label>WSLRNbrCustID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSLRNbrRouteNbr__c</fullName>
        <label>WSLRNbrRouteNbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhslrNo__c</fullName>
        <label>WhslrNo</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>custid__c</fullName>
        <label>custid</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Route Schedule</label>
    <nameField>
        <displayFormat>RS-{00000}</displayFormat>
        <label>Route Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>